--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-server-express": "^1.4.1",
     "graphql-tools": "^8.3.4",
     "lodash": "^4.17.21",
